# minimal-example

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  README.md  lefthook.yml  pyproject.toml
.buildkite/: pipeline.yaml
.github/workflows/: autotools.yaml  basic-cleanup-disk.yaml  basic-debug.yaml  basic-enable-ipv6.yaml  bazel-remote-cache.yaml  bazel.yaml  blade.yaml  buck.yaml  build-system.yaml  cmake.yaml  cuda-docker.yaml  cuda-usage.yaml  cuda.yaml  docker.yaml  earthly.yaml  gcc.yaml  gh-cleanup-disk.yaml  gh-enable-ipv6.yaml  gradle.yaml  maven.yaml  meson.yaml  nixpkgs-with-cache.yaml  package-manager.yaml  please.yaml  publish-pypi.yaml  py-packaging.yaml  pypi-publish-via-build.yaml  pypi-publish-via-poetry.yaml  pypi-publish-via-setuptools.yaml  scons.yaml  tensorflow-custom-op.yaml  tensorflow-source-build-docker.yaml  tensorflow-source-build.yaml  tensorflow-usage.yaml  tensorflow.yaml  tensorflow_lib.yaml  tensorflow_source_build.yaml  xmake.yaml
autotools/cpp/: Taskfile.yaml
bazel/cpp/: .bazelrc  Taskfile.yaml  WORKSPACE  profile.json
bazel/cpp/src/: BUILD.bazel  hello-shared.cc
bazel/docker/: Dockerfile  build.sh
bazel/go/: BUILD  Taskfile.yaml  WORKSPACE  go_mod.bzl  main.go
bazel/rules/: fbthrift_build_defs.bzl  thrift_build_defs.bzl
bazel/with-buildbuddy/: .bazelrc
bazel/with-buildkite/: WORKSPACE
bazel/with-bzlmod/: .bazelrc  MODULE.bazel  Taskfile.yaml
bazel/with-bzlmod/src/: BUILD  main.cc
bazel/with-clang/: MODULE.bazel  WORKSPACE
bazel/with-clang-v2/: MODULE.bazel
bazel/with-clang/src/: BUILD  feature_test.cc
bazel/with-conan/: Taskfile.yaml  WORKSPACE  conanfile.txt
bazel/with-libllvm/: .bazelrc  MODULE.bazel  WORKSPACE
bazel/with-libllvm-v2/: MODULE.bazel  Taskfile.yaml
buck/cpp/: Taskfile.yaml
buck2/cpp/: BUCK  hello-shared.cc  hello.h  main.cc
build-system/bazel/basic-cpp/: BUILD  Dockerfile  MODULE.bazel  Taskfile.yaml  WORKSPACE  compile_commands.json  profile.json
build-system/bazel/basic-cpp/src/: BUILD  hello-static.cc  main.cc
build-system/bazel/basic-go/: BUILD  MODULE.bazel  Taskfile.yaml  go.mod
build-system/bazel/toolchain-clang/: .bazelrc  Dockerfile  MODULE.bazel  Taskfile.yaml
build-system/bazel/toolchain-clang/src/: BUILD  feature_test.cc  main.cc
build-system/cmake/hello/: CMakeLists.txt  Copts.cmake  Dockerfile  Taskfile.yaml
build-system/cmake/hello/src/: CMakeLists.txt  hello-shared.cc
build-system/cmake/with-conan/: CMakeLists.txt  Dockerfile  Taskfile.yaml  conanfile.txt
build-system/cmake/with-conan/conan_deps/: BZip2-release-x86_64-data.cmake  BZip2Config.cmake  BZip2ConfigVersion.cmake  BZip2Targets.cmake  Boost-Target-release.cmake  Boost-release-x86_64-data.cmake  BoostConfig.cmake  BoostConfigVersion.cmake  BoostTargets.cmake  CMakePresets.json  ZLIBConfig.cmake  ZLIBConfigVersion.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-config-version.cmake  fmt-config.cmake  fmt-release-x86_64-data.cmake  fmtTargets.cmake  libbacktrace-config-version.cmake  libbacktrace-config.cmake  libbacktrace-release-x86_64-data.cmake  libbacktraceTargets.cmake  module-BZip2Targets.cmake  module-ZLIB-release-x86_64-data.cmake
build-system/cmake/with-vcpkg/: CMakeLists.txt  Dockerfile  Taskfile.yaml
build-system/gradle/: Dockerfile  Taskfile.yaml  settings.gradle
build-system/maven/: Dockerfile  pom.xml
buildfarm/docker/: Dockerfile  build.sh  run.sh
cmake/: cheatsheets.md
cmake/bazel-like/: CMakeLists.txt
cmake/generator/: gen_flat.cmake
cmake/hello/: CMakeLists.txt  Taskfile.yaml
cmake/with-ccache/: CMakeLists.txt  main.cc
cmake/with-conan/: CMakeLists.txt  Taskfile.yaml  conanfile.txt  main.cc
cmake/with-conan-multi-pkgs/: CMakeLists.txt  Taskfile.yaml  conanfile.txt  main.cc
cmake/with-cpm/: CMakeLists.txt  main.cc
cmake/with-cpm-multi-pkgs/: CMakeLists.txt  deps-generated.cmake  main.cc
cmake/with-cpm/cmake/: CPM.cmake
cmake/with-vcpkg/: CMakeLists.txt  Taskfile.yaml  main.cc  vcpkg.json
cmake/with-vcpkg-multi-pkgs/: CMakeLists.txt  generated-find-pkgs.cmake  main.cc  vcpkg.json
conda/docker/: build.sh
cuda/build-with-bazel/: WORKSPACE  kernel.cu  kernel.h
cuda/build-with-bazel-bzlmod/: BUILD  MODULE.bazel  kernel.cu  main.cc
cuda/build-with-nvcc/: Taskfile.yaml  main.cu
cuda/docker/: build.sh  cu12.3-cudnn8.Dockerfile  cuda11.4-cudnn8.Dockerfile  cuda12.3-cudnn8.Dockerfile  cuda12.3-cudnn9.Dockerfile
distcc/docker/: Dockerfile  Dockerfile.v2  build.sh  run.sh
docker/multi-platform/: go.mod  hello.go
earthly/cpp/: CMakeLists.txt  main.cc
earthly/go/: Earthfile  main.go
gcc/hello/: Taskfile.yaml  gcc.sh
gcc/split-dwarf/: main.cc
gcc/strip-sympol/: Taskfile.yaml  main.cc
github-actions/cleanup-disk/: free-github-action-disk-space.sh
github-actions/setup-cuda/: action.yaml
gradle/hello/: build.gradle
homebrew/Formula/: apfs-fuse.rb  boost-python@1.72.0.rb  boost@1.57.0.rb  boost@1.60.0.rb  boost@1.72.0.rb  fbthrift@2021.02.15.rb  fizz@2021.02.15.rb  folly@2021.02.15.rb  gflags@2.2.2.rb  glibc@2.32.rb  glog@0.5.0.rb  jemalloc-prof.rb  libevent-openssl1.0.rb  libiberty.rb  libunwind.rb  ncurses-termlib.rb  ncurses@5.rb  openssl@1.0.2t.rb  openssl@1.0.2u.rb  qt@5.13.2.rb  wangle@2021.02.15.rb
homebrew/docker/: Dockerfile  build.sh
homebrew/lib/: boost_helper.rb
meson/cpp/: meson.build
please/cpp/: .plzconfig
python/packaging/use-flit/: Taskfile.yaml  pyproject.toml
python/packaging/use-flit/foo/: __init__.py  __main__.py  __version__.py
python/packaging/use-pdm/: pyproject.toml
python/packaging/use-poetry/: Taskfile.yaml  pyproject.toml
python/pdm/: Taskfile.yaml  pyproject.toml
python/pip/: Taskfile.yaml  pyproject.toml  requirements.txt  setup.py
python/pip/foo/: foo.py
python/pipenv/: Pipfile  Taskfile.yaml
python/poetry/: Taskfile.yaml  pyproject.toml
qt/qt5-build-with-bazel/: BUILD  Earthfile  WORKSPACE  main.cpp  (+2 more)
(+340 files in other folders)
