module(
    name = "learn-build-system",
    version = "1.0.0",
)

# 1. The metadata of glog is fetched from the BCR, including its dependencies (gflags).
# 2. The `repo_name` attribute allows users to reference this dependency via the `com_github_google_glog` repo name.

bazel_dep(name = "fmt", version = "8.1.1")
