# Copyright (c) 2018-2023 curoky(cccuroky@gmail.com).
#
# This file is part of learn-build-system.
# See https://github.com/curoky/learn-build-system for further info.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "build-cuda-with-bazel",
    version = "1.0.0",
)

# bazel_dep(name = "abseil-cpp", version = "20230125.1")
# # bazel_dep(name = "bazel-compile-commands-extractor", version = "1.0.0")
# bazel_dep(name = "bzip2", version = "1.0.8")
# bazel_dep(name = "c-ares", version = "1.15.0")
# bazel_dep(name = "catch2", version = "3.3.0")
# bazel_dep(name = "fmt", version = "9.1.0")
# bazel_dep(name = "gflags", version = "2.2.2")
# bazel_dep(name = "glog", version = "0.6.0")
# bazel_dep(name = "google_benchmark", version = "1.8.2", repo_name = "benchmark")
# bazel_dep(name = "googletest", version = "1.12.1")
# # bazel_dep(name = "llvm-project-overlay", version = "16.0.0-bcr.0")
# bazel_dep(name = "lz4", version = "1.9.4")
# bazel_dep(name = "nlohmann_json", version = "3.11.2")
# bazel_dep(name = "onetbb", version = "2021.10.0")
# bazel_dep(name = "platforms", version = "0.0.7")
# bazel_dep(name = "protobuf", version = "21.7")
# bazel_dep(name = "rapidjson", version = "1.1.0")
# bazel_dep(name = "re2", version = "2021-09-01")
# bazel_dep(name = "rules_bison", version = "0.2.2")
# bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_cuda", version = "")
# bazel_dep(name = "rules_flex", version = "0.2.1")
# bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")
# bazel_dep(name = "rules_m4", version = "0.2.3")
# bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
# bazel_dep(name = "spdlog", version = "1.11.0")
# # bazel_dep(name = "toolchains_llvm", version = "0.10.3")
# bazel_dep(name = "upb", version = "0.0.0-20220923-a547704")
# bazel_dep(name = "zlib", version = "1.2.13")

archive_override(
    module_name = "rules_cuda",
    strip_prefix = "rules_cuda-main",
    urls = ["https://github.com/bazel-contrib/rules_cuda/archive/refs/heads/main.tar.gz"],
)

########################### CUDA ####################################
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "/usr/local/cuda-11.4",
)
use_repo(cuda, "local_cuda")
