[project]
name = "pypi_tutorial"
version = "1.0.0"
authors = [{ name = "curoky", email = "cccuroky@gmail.com" }]
description = "A small example package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/curoky/learn-build-system"
"Bug Tracker" = "https://github.com/curoky/learn-build-system/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
