# https://github.com/python-poetry/poetry/blob/master/pyproject.toml

[tool.poetry]
name = "pypi_tutorial"
version = "1.0.0"
authors = ["curoky <cccuroky@gmail.com>"]
description = "A small example package"
readme = "README.md"
license = "Apache License 2.0"
packages = [{ include = "foo", from = "./" }]
include = [{ path = "tests", format = "sdist" }]
repository = "https://github.com/curoky/learn-build-system"
homepage = "https://github.com/curoky/learn-build-system"
keywords = ["learn-build-system"]

[tool.poetry.dependencies]
python = "^3.10" # python = "~2.7 || ^3.2"  # Compatible python versions must be declared here
toml = "*"
thrift = "*"
typer = "*"
# Dependencies with extras
requests = { version = "*", extras = ["security"] }

# Python specific dependencies with prereleases allowed
# pathlib2 = { version = "*", python = "~2.7", allow-prereleases = true }

# Git dependencies
# cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
# pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
my-script = "my_package:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
