module(
    name = "bazel-example",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.1")

# Alternatively, download an SDK for a fixed OS/architecture.
go_sdk.download(
    goarch = "amd64",
    goos = "linux",
    version = "1.23.1",
)

# Another alternative is to register the Go SDK installed on the host (see the nota bene below).
# go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_urfave_cli_v2",
    # "com_github_golang_mock",
    # "com_github_golang_protobuf",
    # "org_golang_x_net",
)
