[project]
name = "foo"
# version = "1.0.0"
# description = "A small example package"
authors = [{ name = "curoky", email = "cccuroky@gmail.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache License 2.0" }
dynamic = ["version", "description"]

[project.scripts]
foo-cli = "foo.foo:foo"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
