[tool.pdm]

[tool.poetry]
name = "foo"
version = "1.0.0"
description = "A small example package"
authors = ["curoky <cccuroky@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.13.0"

[tool.poetry.scripts]
foo-cli = "foo.foo:foo"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
